refactor:hidde page nav in mobile devices

--- a/src/layout/PageHeader.astro
+++ b/src/layout/PageHeader.astro
@@ -9,7 +9,7 @@ import SlpitText from "../components/utils/SlpitText.astro";
       >VILLEGAS<span class="text-amber-500">3D</span></span
     >
   </div>
-  <nav>
+  <nav class="hidden lg:block">
     <ul class="flex items-center gap-12 text-lg">
       <li>
         <a href="#inicio"><SlpitText>Inicio</SlpitText></a>
