fix:src propertie in images and fix grammar in alt descriptions

--- a/src/layout/PageHeader.astro
+++ b/src/layout/PageHeader.astro
@@ -30,24 +30,24 @@ import SlpitText from "../components/utils/SlpitText.astro";
       <li>
         <Icon
           href="https://www.instagram.com/villegas.arts/"
-          src="public/svg/instagram.svg"
-          alt="Enlace al Instagram de Juan Villegas"
+          src="/svg/instagram.svg"
+          alt="enlace al Instagram de Juan Villegas"
           width={35}
         />
       </li>
       <li>
         <Icon
           href="https://github.com/numonu"
-          src="public/svg/github.svg"
-          alt="Enlace al GitHub de Juan Villegas"
+          src="/svg/github.svg"
+          alt="enlace al GitHub de Juan Villegas"
           width={32}
         />
       </li>
       <li>
         <Icon
           href="https://www.linkedin.com/in/juan-villegas-dev/"
-          src="public/svg/linkedin.svg"
-          alt="Enlace al Linkedin de Juan Villegas"
+          src="/svg/linkedin.svg"
+          alt="enlace al Linkedin de Juan Villegas"
           width={40}
         />
       </li>
