refactor:adjust sizes and responsivity

--- a/src/layout/Hero.astro
+++ b/src/layout/Hero.astro
@@ -3,22 +3,24 @@ import GlareLabel from "../components/static/GlareLabel.astro";
 ---
 
 <section
-  class="mx-auto grid max-w-[600px] gap-12 pt-24 lg:max-w-none lg:grid-cols-2"
+  class="mx-auto mb-28 grid max-w-[600px] gap-12 pt-12 lg:max-w-none lg:grid-cols-2 lg:gap-52"
 >
-  <div>
-    <h1
-      class="mb-6 text-center font-roboto text-6xl font-semibold leading-[4.2rem] text-neutral-700 lg:text-start"
-    >
-      <span class="text-cyan-400">Transforma</span> tu presencia en línea con <span
-        class="text-amber-500">Diseños en 3D</span
+  <div class="flex h-full flex-col justify-center">
+    <div>
+      <h1
+        class="mb-6 text-center font-roboto text-6xl font-semibold leading-[4.2rem] text-neutral-700 lg:text-start"
       >
-    </h1>
-    <GlareLabel />
-    <p class="text-center font-light text-neutral-700 lg:text-start">
-      ¡Hola! Soy Juan Villegas, un diseñador 3D reconocido por mi creatividad y
-      experiencia de más de 5 años en la industria. Mis clientes valoran mi
-      habilidad para convertir ideas en cautivadoras obras de arte.
-    </p>
+        <span class="text-cyan-400">Transforma</span> tu presencia en línea con <span
+          class="text-amber-500">Diseños en 3D</span
+        >
+      </h1>
+      <GlareLabel />
+      <p class="text-center font-light text-neutral-700 lg:text-start">
+        ¡Hola! Soy Juan Villegas, un diseñador 3D reconocido por mi creatividad
+        y experiencia de más de 5 años en la industria. Mis clientes valoran mi
+        habilidad para convertir ideas en cautivadoras obras de arte.
+      </p>
+    </div>
   </div>
   <div class="relative isolate mx-auto max-w-[450px] p-4 lg:max-w-none">
     <!--Absolute Deco -->
