refactor:add more width in border

--- a/src/layout/Hero.astro
+++ b/src/layout/Hero.astro
@@ -48,7 +48,7 @@ import GlareLabel from "../components/static/GlareLabel.astro";
       />
     </div>
     <div
-      class="absolute left-0 top-0 -z-20 aspect-square w-full scale-110 rounded-full border border-amber-500"
+      class="absolute left-0 top-0 -z-20 aspect-square w-full scale-110 rounded-full border-2 border-amber-500"
     >
     </div>
     <img
