feat:unable click in icons with no hrefs

--- a/src/components/utils/Icon.astro
+++ b/src/components/utils/Icon.astro
@@ -6,13 +6,13 @@ interface Props {
   alt: string;
   width: number;
 }
-const { src, alt, width, href = "#", target = "_blank" } = Astro.props;
+const { src, alt, width, href , target = "_blank" } = Astro.props;
 ---
 
 <a
   target={target}
   href={href}
-  class="inline-block cursor-pointer"
+  class={`inline-block cursor-pointer ${!href && "pointer-events-none"}`}
   style=`width: ${width / 16}rem;`
 >
   <img class="aspect-square" src={src} alt={alt} />
