refactor:import new sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import "@fontsource/poppins";
 import Hero from "../layout/Hero.astro";
 import PageHeader from "../layout/PageHeader.astro";
 import Wrapper from "../components/utils/Wrapper.astro";
+import Services from '../layout/Services.astro';
+import Features from '../layout/Features.astro';
 ---
 
 <html lang="es">
@@ -28,6 +30,8 @@ import Wrapper from "../components/utils/Wrapper.astro";
     <Wrapper>
       <PageHeader />
       <Hero />
+      <Features/>
+      <Services/>
     </Wrapper>
   </body>
 </html>
