refactor:import new section for reviews

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import PageHeader from "../layout/PageHeader.astro";
 import Wrapper from "../components/utils/Wrapper.astro";
 import Services from '../layout/Services.astro';
 import Features from '../layout/Features.astro';
+import Reviews from '../layout/Reviews.astro';
 ---
 
 <html lang="es">
@@ -32,6 +33,7 @@ import Features from '../layout/Features.astro';
       <Hero />
       <Features/>
       <Services/>
+      <Reviews/>
     </Wrapper>
   </body>
 </html>
