refactor:improve size if image not loaded

--- a/src/components/utils/Icon.astro
+++ b/src/components/utils/Icon.astro
@@ -12,8 +12,8 @@ const { src, alt, width, href , target = "_blank" } = Astro.props;
 <a
   target={target}
   href={href}
-  class={`inline-block cursor-pointer ${!href && "pointer-events-none"}`}
+  class={`inline-block aspect-square cursor-pointer ${!href && "pointer-events-none"}`}
   style=`width: ${width / 16}rem;`
 >
-  <img class="aspect-square" src={src} alt={alt} />
+  <img src={src} alt={alt} />
 </a>
