refactor:change tags from divs to list

--- a/src/layout/Reviews.astro
+++ b/src/layout/Reviews.astro
@@ -13,7 +13,7 @@ import ReviewCard from "../components/utils/ReviewCard.astro";
     satisfacer las necesidades individuales de cada cliente, garantizando una
     experiencia positiva en cada interacción
   </p>
-  <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-12">
+  <ul class="grid sm:grid-cols-2 lg:grid-cols-3 gap-12">
     <ReviewCard
       username="Shafeeq Khan"
       description="Juan es increíblemente competente y versado en su campo. Además de tener excelentes aptitudes profesionales, es un caballero comprometido, una persona muy cooperativa y siempre dispuesto a echar una mano, ofrecer consejo y hacer excelentes recomendaciones para elevar el nivel del producto final"
@@ -27,5 +27,5 @@ import ReviewCard from "../components/utils/ReviewCard.astro";
       username="Daniel Lannon"
       description="Su habilidad para captar y materializar mis ideas en modelos 3D realistas fue asombrosa. La atención al detalle y la calidad de su trabajo son impecables. Además, cumplió con los plazos establecidos, lo cual fue fundamental para mi proyecto"
     />
-  </div>
+  </ul>
 </section>
