--- a/src/components/utils/ReviewCard.astro
+++ b/src/components/utils/ReviewCard.astro
@@ -11,7 +11,7 @@ interface Props {
 const { src, username, description, stars = 5 } = Astro.props;
 ---
 
-<div class="flex flex-col">
+<li class="flex flex-col">
   <header class="mb-4 flex justify-between">
     <div class="flex items-center gap-2">
       <div
@@ -47,4 +47,4 @@ const { src, username, description, stars = 5 } = Astro.props;
       <Icon src="svg/upwork.svg" width={60} alt="logo de upwork" /></span
     >
   </footer>
-</div>
+</li>
