--- a/src/layout/Services.astro
+++ b/src/layout/Services.astro
@@ -19,7 +19,7 @@ import ServiceCard from "../components/utils/ServiceCard.astro";
         Mis Servicios
       </h2>
     </header>
-    <div class="grid gap-4 sm:grid-cols-2 lg:grid-cols-2">
+    <ul class="grid gap-4 sm:grid-cols-2 lg:grid-cols-2">
       <ServiceCard
         title="Modelado 3D"
         description="Creación de modelos tridimensionales de objetos, personajes, arquitecturas, etc., utilizando software especializado como Blender"
@@ -44,6 +44,6 @@ import ServiceCard from "../components/utils/ServiceCard.astro";
       >
         <Icon src="svg/cloth.svg" alt="icono de una camiseta" width={35} />
       </ServiceCard>
-    </div>
+    </ul>
   </div>
 </section>
