--- a/src/components/utils/FeatCard.astro
+++ b/src/components/utils/FeatCard.astro
@@ -6,7 +6,7 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 
-<article class="flex max-w-[300px] gap-6">
+<li class="flex max-w-[300px] gap-6">
   <div>
     <slot />
   </div>
@@ -18,4 +18,4 @@ const { title, description } = Astro.props;
       {description}
     </p>
   </div>
-</article>
+</li>
