refactor:import portfolio section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Wrapper from "../components/utils/Wrapper.astro";
 import Services from '../layout/Services.astro';
 import Features from '../layout/Features.astro';
 import Reviews from '../layout/Reviews.astro';
+import Portafolio from '../layout/Portafolio.astro';
 ---
 
 <html lang="es">
@@ -34,6 +35,7 @@ import Reviews from '../layout/Reviews.astro';
       <Features/>
       <Services/>
       <Reviews/>
+      <Portafolio/>
     </Wrapper>
   </body>
 </html>
