refactor:import new about me section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Services from '../layout/Services.astro';
 import Features from '../layout/Features.astro';
 import Reviews from '../layout/Reviews.astro';
 import Portafolio from '../layout/Portafolio.astro';
+import About from '../layout/About.astro';
 ---
 
 <html lang="es">
@@ -36,6 +37,7 @@ import Portafolio from '../layout/Portafolio.astro';
       <Services/>
       <Reviews/>
       <Portafolio/>
+      <About/>
     </Wrapper>
   </body>
 </html>
