--- a/src/layout/About.astro
+++ b/src/layout/About.astro
@@ -2,7 +2,7 @@
 import AboutIllustration from "../components/static/AboutIllustration.astro";
 ---
 
-<section class="grid gap-6 py-12 lg:grid-cols-2">
+<section class="mb-36 grid gap-6 py-12 lg:grid-cols-2">
   <div class="hidden lg:block">
     <AboutIllustration />
   </div>
