feat:add hover effect in link icons

--- a/src/components/utils/Icon.astro
+++ b/src/components/utils/Icon.astro
@@ -13,7 +13,7 @@ const { src, alt, width, href } = Astro.props;
     <a
       target="_blank"
       href={href}
-      class="inline-block aspect-square cursor-pointer"
+      class="inline-block aspect-square cursor-pointer hover:brightness-110"
       style={`width: ${width / 16}rem;`}
     >
       <img src={src} alt={alt} />
