refactor:change icon links and box size

--- a/src/layout/PageHeader.astro
+++ b/src/layout/PageHeader.astro
@@ -31,24 +31,24 @@ import SlpitText from "../components/utils/SlpitText.astro";
         <Icon
           href="https://www.instagram.com/villegas.arts/"
           src="/svg/instagram.svg"
-          alt="enlace al Instagram de Juan Villegas"
-          width={35}
+          alt="enlace al instagram de Juan Villegas"
+          width={42}
         />
       </li>
       <li>
         <Icon
-          href="https://github.com/numonu"
-          src="/svg/github.svg"
-          alt="enlace al GitHub de Juan Villegas"
-          width={32}
+          href="https://stock.adobe.com/pe/contributor/211133747/villegasarts?load_type=author&prev_url=detail"
+          src="/svg/adobe.svg"
+          alt="enlace al adobe stock de Juan Villegas"
+          width={42}
         />
       </li>
       <li>
         <Icon
-          href="https://www.linkedin.com/in/juan-villegas-dev/"
-          src="/svg/linkedin.svg"
-          alt="enlace al Linkedin de Juan Villegas"
-          width={40}
+          href="https://wa.me/511928959043/?text=Hola%Juan%vengo%de%tu%portafolio%y%estoy%interesado%en%tus%servicios"
+          src="/svg/whatsapp.svg"
+          alt="enlace al whatsapp de Juan Villegas"
+          width={36}
         />
       </li>
     </ul>
