refactor:change icon links and box size

--- a/src/layout/Portafolio.astro
+++ b/src/layout/Portafolio.astro
@@ -17,29 +17,29 @@ import Icon from "../components/utils/Icon.astro";
       mi compromiso con la excelencia y la expresión artística. ¡Explora y
       déjate inspirar por mi trabajo
     </p>
-    <ul class="flex items-center justify-center gap-2 lg:justify-start">
+    <ul class="flex items-center justify-center gap-2 lg:justify-start [&>*]:inline-block">
       <li>
         <Icon
           href="https://www.instagram.com/villegas.arts/"
           src="/svg/instagram.svg"
-          alt="enlace al Instagram de Juan Villegas"
-          width={40}
+          alt="enlace al instagram de Juan Villegas"
+          width={52}
         />
       </li>
       <li>
         <Icon
           href="https://stock.adobe.com/pe/contributor/211133747/villegasarts?load_type=author&prev_url=detail"
           src="/svg/adobe.svg"
-          alt="enlace al Adobe Stock de Juan Villegas"
-          width={40}
+          alt="enlace al adobe stock de Juan Villegas"
+          width={52}
         />
       </li>
       <li>
         <Icon
           href="https://www.upwork.com/freelancers/~016aa13d2d22429ef5?s=1110580766784868352"
           src="/svg/upwork_square.svg"
-          alt="enlace al Upwork de Juan Villegas"
-          width={35}
+          alt="enlace al upwork de Juan Villegas"
+          width={44}
         />
       </li>
     </ul>
