refactor:change descriptions and deparation

--- a/src/layout/Portafolio.astro
+++ b/src/layout/Portafolio.astro
@@ -10,14 +10,23 @@ import Icon from "../components/utils/Icon.astro";
       <h2 class="mb-2 text-4xl text-purple-400">Proyectos Recientes</h2>
       <h3 class="text-xl text-cyan-400">Explora mi Mundo Creativo</h3>
     </header>
-    <p class="mb-16 text-center lg:text-start">
-      Bienvenido a mi universo creativo! Aquí encontrarás una colección de
-      proyectos que reflejan mi pasión, dedicación y creatividad. Desde diseños
-      vibrantes hasta soluciones innovadoras, cada proyecto es el resultado de
-      mi compromiso con la excelencia y la expresión artística. ¡Explora y
-      déjate inspirar por mi trabajo
+    <p class="mb-4 text-center lg:text-start">
+      Mis proyectos se extienden desde la elaboración de personajes en 3D hasta la
+      creación de iconos y animaciones, siempre impregnados con mi distintivo
+      estilo cartoon. Cada pieza es el resultado de un meticuloso proceso
+      creativo y técnico, donde la atención al detalle y la búsqueda constante
+      de la originalidad se hacen evidentes. Mis personajes cobran vida con
+      expresiones únicas y cautivadoras, mis iconos comunican conceptos de
+      manera clara y distintiva, mientras que mis animaciones llevan a la
+      audiencia a un mundo vibrante y lleno de energía
     </p>
-    <ul class="flex items-center justify-center gap-2 lg:justify-start [&>*]:inline-block">
+    <p class="mb-8 text-center lg:text-start">
+      Te invito a explorar mis perfiles públicos, donde exhibo una amplia gama
+      de trabajos que representan mi pasión por la creación.
+    </p>
+    <ul
+      class="flex items-center justify-center gap-2 lg:justify-start [&>*]:inline-block"
+    >
       <li>
         <Icon
           href="https://www.instagram.com/villegas.arts/"
