--- a/src/layout/PageFooter.astro
+++ b/src/layout/PageFooter.astro
@@ -3,11 +3,17 @@ import Icon from "../components/utils/Icon.astro";
 import Wrapper from "../components/utils/Wrapper.astro";
 ---
 
-<footer class="bg-zinc-900 py-6 text-white text-sm">
+<footer class="bg-zinc-900 py-6 text-sm text-white">
   <Wrapper>
-    <div class="flex justify-between">
-      <span class="flex items-center gap-2"><Icon width={22} alt="icono de un correo" src="svg/email.svg"/> juan.villegas.dev@gmail.com</span>
-      <span class="flex items-center gap-2"><Icon width={24} alt="icono de un telefono" src="svg/phone.svg"/> +51 935 369 832</span>
+    <div class="flex gap-4 flex-wrap justify-between">
+      <span class="flex items-center gap-2"
+        ><Icon width={22} alt="icono de un correo" src="svg/email.svg" />
+        juan.villegas.dev@gmail.com</span
+      >
+      <span class="flex items-center gap-2"
+        ><Icon width={24} alt="icono de un telefono" src="svg/phone.svg" /> +51
+        935 369 832</span
+      >
       <span class="font-extralight">©️ Todos los derechos reservados</span>
     </div>
   </Wrapper>
