refactor:import new illustration to hero

--- a/src/layout/Hero.astro
+++ b/src/layout/Hero.astro
@@ -3,7 +3,7 @@ import GlareLabel from "../components/static/GlareLabel.astro";
 ---
 
 <section
-  class="mx-auto mb-28 grid max-w-[600px] gap-12 pt-12 lg:max-w-none lg:grid-cols-2 lg:gap-52"
+  class="mx-auto mb-28 grid max-w-[700px] gap-12 pt-12 lg:max-w-none lg:grid-cols-2 lg:gap-24"
 >
   <div class="flex h-full flex-col justify-center">
     <div>
@@ -22,51 +22,7 @@ import GlareLabel from "../components/static/GlareLabel.astro";
       </p>
     </div>
   </div>
-  <div class="relative isolate mx-auto max-w-[450px] p-4 lg:max-w-none">
-    <!--Absolute Deco -->
-    <div
-      class="absolute left-0 top-0 -z-10 aspect-square w-full rounded-full bg-gradient-to-t from-red-200 to-red-400"
-    >
-    </div>
-    <div
-      class="absolute left-0 top-0 -z-10 aspect-square w-full overflow-hidden rounded-full"
-    >
-      <img
-        class="absolute aspect-square w-1/3"
-        src="/images/circle.webp"
-        alt="icono en 3D"
-      />
-      <img
-        class="absolute bottom-0 right-0 aspect-square w-1/2"
-        src="/images/circle.webp"
-        alt="icono en 3D"
-      />
-      <img
-        class="absolute bottom-0 right-0 aspect-square w-1/4 -translate-y-[150%] translate-x-1/2"
-        src="/images/circle.webp"
-        alt="icono en 3D"
-      />
-    </div>
-    <div
-      class="absolute left-0 top-0 -z-20 aspect-square w-full scale-110 rounded-full border-2 border-amber-500"
-    >
-    </div>
-    <img
-      src="images/stick.webp"
-      class="absolute bottom-0 right-0 z-10 aspect-square w-[30%] -translate-x-6 -translate-y-4"
-      alt="icono en 3D"
-    />
-    <img
-      src="/images/arrow.webp"
-      class="absolute bottom-0 left-0 z-10 aspect-square w-1/3"
-      alt="icono en 3D"
-    />
-    <!--end -->
-    <img
-      class="mx-auto w-[55%]"
-      src="/images/character.webp
-    "
-      alt="personaje en 3D"
-    />
+  <div class="mx-auto max-w-[500px] lg:max-w-none">
+    <img src="/images/mainIllustration.webp" alt="illustracion principal en 3D" />
   </div>
 </section>
