refactor:remove content layout shifting in hero illustration

--- a/src/layout/Hero.astro
+++ b/src/layout/Hero.astro
@@ -22,7 +22,10 @@ import GlareLabel from "../components/static/GlareLabel.astro";
       </p>
     </div>
   </div>
-  <div class="mx-auto max-w-[500px] lg:max-w-none">
-    <img src="/images/mainIllustration.webp" alt="illustracion principal en 3D" />
+  <div class="mx-auto aspect-[17/19] w-full max-w-[500px] lg:max-w-none">
+    <img
+      src="/images/mainIllustration.webp"
+      alt="illustracion principal en 3D"
+    />
   </div>
 </section>
