refactor:add new illustration

--- a/src/layout/Hero.astro
+++ b/src/layout/Hero.astro
@@ -24,7 +24,7 @@ import GlareLabel from "../components/static/GlareLabel.astro";
   </div>
   <div class="mx-auto aspect-[17/19] w-full max-w-[500px] lg:max-w-none">
     <img
-      src="/images/mainIllustration.webp"
+      src="/images/main.webp"
       alt="illustracion principal en 3D"
     />
   </div>
