feat:add meta tags for seo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,8 @@ import PageFooter from "../layout/PageFooter.astro";
     <link rel="icon" type="image/svg+xml" href="/svg/3d.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Artista 3D Freelance - Villegas 3D</title>
+    <meta name="description" content="Descubre mis servicios freelance profesionales de renderizado y modelado 3D personalizado. Transformamos tus ideas en realidades visuales impresionantes. ¡Potencia tu proyecto con Villegas3D ahora!">
+    <title>Servicios de render y modelado 3D personalizado - Villegas 3D</title>
     <style is:global>
       body {
         font-family: "Poppins", sans-serif;
