feat:add meta tags for sharing and fix grammar in title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,12 @@ import PageFooter from "../layout/PageFooter.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Descubre mis servicios freelance profesionales de renderizado y modelado 3D personalizado. Transformamos tus ideas en realidades visuales impresionantes. ¡Potencia tu proyecto con Villegas3D ahora!">
-    <title>Servicios de render y modelado 3D personalizado - Villegas 3D</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Contrata Servicios de Render y Modelado 3D personalizado" />
+    <meta property="og:description" content="Descubre servicios freelance profesionales de renderizado y modelado 3D personalizado. Transformamos tus ideas en realidades visuales impresionantes. ¡Potencia tu proyecto con ahora!" />
+    <meta property="og:image" content="/images/screen.jpg" />
+    <meta property="og:url" content="permalink" />
+    <title>Servicios de Render y Modelado 3D personalizado - Villegas 3D</title>
     <style is:global>
       body {
         font-family: "Poppins", sans-serif;
