fix:fix url for direct message to whatsapp

--- a/src/layout/Contact.astro
+++ b/src/layout/Contact.astro
@@ -45,7 +45,7 @@ import Icon from "../components/utils/Icon.astro";
         >
         <div class="mx-2 h-12 w-[1px] bg-neutral-200"></div>
         <Icon
-          href="https://wa.me/511928959043/?text=Hola%uwu"
+          href="https://wa.me/51928959043/?text=Hola%Juan%vengo%de%tu%portafolio%y%estoy%interesado%en%tus%servicios"
           src="svg/whatsapp.svg"
           alt="enviame un mensaje por whatsapp"
           width={47}
