--- a/src/layout/Contact.astro
+++ b/src/layout/Contact.astro
@@ -45,7 +45,7 @@ import Icon from "../components/utils/Icon.astro";
         >
         <div class="mx-2 h-12 w-[1px] bg-neutral-200"></div>
         <Icon
-          href="https://wa.me/51928959043/?text=Hola%Juan%vengo%de%tu%portafolio%y%estoy%interesado%en%tus%servicios"
+          href="https://wa.me/51928959043/?text=¡Hola Juan! He echado un vistazo a tu portafolio y me han llamado mucho la atención tus servicios. Estoy interesado en saber más al respecto."
           src="svg/whatsapp.svg"
           alt="enviame un mensaje por whatsapp"
           width={47}
