--- a/src/layout/PageHeader.astro
+++ b/src/layout/PageHeader.astro
@@ -45,7 +45,7 @@ import SlpitText from "../components/utils/SlpitText.astro";
       </li>
       <li>
         <Icon
-          href="https://wa.me/51928959043/?text=Hola%Juan%vengo%de%tu%portafolio%y%estoy%interesado%en%tus%servicios"
+          href="https://wa.me/51928959043/?text=¡Hola Juan! He echado un vistazo a tu portafolio y me han llamado mucho la atención tus servicios. Estoy interesado en saber más al respecto."
           src="/svg/whatsapp.svg"
           alt="enlace al whatsapp de Juan Villegas"
           width={36}
