feat:add new element for nav section

--- a/src/layout/PageHeader.astro
+++ b/src/layout/PageHeader.astro
@@ -12,13 +12,13 @@ import SlpitText from "../components/utils/SlpitText.astro";
   <nav class="hidden lg:block">
     <ul class="flex items-center gap-12 text-lg">
       <li>
-        <a href="#inicio"><SlpitText>Inicio</SlpitText></a>
-      </li>
-      <li>
         <a href="#servicios"><SlpitText>Servicios</SlpitText></a>
       </li>
       <li>
         <a href="#sobre"><SlpitText>Sobre Mi</SlpitText></a>
+      </li>
+      <li>
+        <a href="#portafolio"><SlpitText>Portafolio</SlpitText></a>
       </li>
       <li>
         <a href="#contacto"><SlpitText>Contacto</SlpitText></a>
