--- a/src/layout/Portafolio.astro
+++ b/src/layout/Portafolio.astro
@@ -2,7 +2,7 @@
 import Icon from "../components/utils/Icon.astro";
 ---
 
-<section class="mb-36 grid gap-4 lg:grid-cols-2">
+<section id="portafolio" class="mb-36 grid gap-4 lg:grid-cols-2">
   <div>
     <header
       class="mb-6 flex flex-col items-center font-roboto font-semibold lg:items-start"
