--- a/src/layout/Services.astro
+++ b/src/layout/Services.astro
@@ -3,7 +3,7 @@ import Icon from "../components/utils/Icon.astro";
 import ServiceCard from "../components/utils/ServiceCard.astro";
 ---
 
-<section class="mb-36 grid gap-12 lg:grid-cols-2">
+<section id="servicios" class="mb-36 grid gap-12 lg:grid-cols-2">
   <div class="flex h-full items-center justify-center">
     <img
       class="w-[85%] max-w-[450px] lg:max-w-none"
