feat:add scroll smooth in page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,9 @@ import PageFooter from "../layout/PageFooter.astro";
     <meta property="og:url" content="permalink" />
     <title>Servicios de Render y Modelado 3D personalizado - Villegas 3D</title>
     <style is:global>
+      html{
+        scroll-behavior: smooth;
+      }
       body {
         font-family: "Poppins", sans-serif;
         color: #262626;
