--- a/src/layout/Contact.astro
+++ b/src/layout/Contact.astro
@@ -3,7 +3,7 @@ import Icon from "../components/utils/Icon.astro";
 ---
 
 <section
-  id="contacto" class="mx-auto grid max-w-[750px] gap-6 rounded-xl rounded-b-none border-4 border-b-0 border-dashed border-amber-400 p-12 lg:max-w-none lg:grid-cols-2"
+  id="contacto" class="mx-auto grid max-w-[750px] gap-6 rounded-xl rounded-b-none border-4 border-b-0 border-dashed border-amber-400 p-6 sm:p-12 lg:max-w-none lg:grid-cols-2"
 >
   <div class="hidden lg:block">
     <img src="images/icons.webp" alt="iconos en 3D de mis redes sociales" />
