style:add link to contact section

--- a/src/layout/Pricing.astro
+++ b/src/layout/Pricing.astro
@@ -8,7 +8,7 @@ import PlanCard from "../components/utils/PlanCard.astro";
     <h2 class="mb-6 font-roboto text-4xl font-semibold">Paquetes y Precios</h2>
     <p class="mx-auto max-w-[70%] opacity-80">
       Seleccione entre mis servicios comunes o solicite uno personalizado y
-      diseñado especialmente para usted en la sección de contacto
+      diseñado especialmente para usted en la sección de <a class="text-green-500 hover:underline" href="#contacto">contacto</a>
     </p>
   </header>
   <div class="flex flex-wrap justify-center gap-16">
