--- a/src/components/utils/PlanCard.astro
+++ b/src/components/utils/PlanCard.astro
@@ -49,6 +49,7 @@ const {
   <p class="mb-12 text-sm">{description}</p>
   <footer class="flex grow flex-col justify-end">
     <a
+      target="_blank"
       href=`https://wa.me/51928959043/?text=${message}`
       class="mb-4 rounded-full px-3 py-2 font-roboto text-sm font-semibold uppercase text-white hover:scale-105 transition-transform"
       style=`background-color: ${color};`>hacer pedido</a
